--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -78,8 +78,7 @@ LAAS-CNRS\\
 \label{cha|configuration}
 \input{genom-configuration}
 
-\chapter[The {\tt demo} module, an overview of GenoM]{The {\tt demo}
-module, an overview of \GenoM}
+\chapter{A first example}
 \label{cha|session}
 \input{genom-session}
 
