Remove aeguill package requirement in tex documentation source.
The aeguill package is useless for an english doc, and can be missing on some
TeX installations.
Also removed forced a4 paper format; it's probably better to use TeX's default.

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -1,6 +1,6 @@
 %
-% Copyright (c) 2001 LAAS/CNRS                        --  Thu Oct 18 2001
-% All rights reserved.                                     Anthony Mallet
+% Copyright (c) 2001,2008 LAAS/CNRS
+% All rights reserved.
 %
 % This document is a translation of the French documentation of GenoM,
 % originally written by Sara Fleury and Matthieu Herrb.
@@ -28,15 +28,15 @@
 % OTHERWISE) ARISING IN ANY WAY OUT OF THE  USE OF THIS SOFTWARE, EVEN IF
 % ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
+%                                       Anthony Mallet on Thu Oct 18 2001
 % $Id$
 %
 
-\documentclass[a4paper,11pt]{book}
+\documentclass[11pt]{book}
 
 \usepackage{genom}		 % this document style
-\usepackage{a4wide,aeguill}
+\usepackage{a4wide}
 \usepackage{graphicx}
-%\usepackage{pstricks}
 \usepackage{tabularx}
 \usepackage{multirow}
 \usepackage{varioref}
