--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
-$LAAS: CHANGELOG 2008/11/04 14:18:31 mallet $
+$LAAS: CHANGELOG 2008/11/04 14:19:15 mallet $
 
  74. Honor PKG_CONFIG environment variable. PKG_CONFIG can be set to the
-     pkg-config program that will be ran to find required dependencies.
+     pkg-config program that will be run to find required dependencies.
  73. Always invoke libtool with --tag so that any compiler name can be used.
  72. Fix tcl detection on x86_64 hosts.
  71. Fix a bug in the communication between tclserv and the tcl clients.
