--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
-$LAAS: CHANGELOG 2008/11/04 14:19:15 mallet $
+$LAAS: CHANGELOG 2008/11/04 15:52:30 mallet $
 
+ 76. Ensure that generated configure scripts don't overwrite user-defined
+     CFLAGS. 
+ 75. Fixed handling of empty CFLAGS in packages required via pkg-config.
  74. Honor PKG_CONFIG environment variable. PKG_CONFIG can be set to the
      pkg-config program that will be run to find required dependencies.
  73. Always invoke libtool with --tag so that any compiler name can be used.
