[doc] when talking about the options that genom command takes, replace Propice by OpenPRS

--- a/doc/user_guide/tex/genom-generation.tex
+++ b/doc/user_guide/tex/genom-generation.tex
@@ -38,7 +38,7 @@
 
 \item{\bf Synopsis}
 
-{\tt genom [-Ocdintx] [-I{\em path}] [-D{\em macro}] <module>[.gen]}
+{\tt genom [-Ocdinto] [-I{\em path}] [-D{\em macro}] <module>[.gen]}
 
 \item{\bf Description}
 
@@ -73,9 +73,9 @@ if files from which  it depends have  been modified since last generation
 libraries. They are mandatory  if you wish to  control this module from a
 tcl interpreter (see section~\ref{sec|tcl}).\\
 
-{\tt    -x}  & {\em    Propice   libraries generation:} Generates Propice
+{\tt    -o}  & {\em    OpenPRS libraries generation:} Generates OpenPRS
 interface libraries.  They are  mandatory  if you   wish to  control this
-module from a Propice program.\\
+module from an OpenPRS program.\\
 
 {\tt -n} & Generates the perl script that is used to generate the module,
 without actually executing it.\\
